--- a/config/config.json
+++ b/config/config.json
@@ -2,14 +2,14 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "hammad",
+    "database": "hammad02",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "hammad",
+    "database": "hammad02",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
