--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "mysql": "^2.18.1",
     "mysql2": "^3.11.5",
     "nodemon": "^3.1.9",
     "sequelize": "^6.37.5",
